test: replace some deprecated methods